--- a/templates/impact.html
+++ b/templates/impact.html
@@ -30,7 +30,7 @@
     <section class="quiz-section text-center mt-5">
       <h2>Think You're Making a Difference?</h2>
       <p>Test your knowledge and see how much you're contributing to a cleaner environment.</p>
-      <a href="{{ url_for('impact_quiz') }}" class="btn btn-primary">Take Our Quiz</a>
+      <a href="{{ url_for('community_report') }}" class="btn btn-primary">Take Our Quiz</a>
     </section>
   </div>
 </main>
