--- a/templates/news.html
+++ b/templates/news.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col-4">
               <a href="https://www.thesouthafrican.com/news/these-popular-cape-town-beaches-have-chronic-water-quality-problems-breaking-12-december-2023/" target="_blank">
-                <img src="{{ url_for('static', filename='images/flag.jfif') }}" alt="‘Red Flag’ Beaches" class="d-block w-100"/>
+                <img src="{{ url_for('static', filename='images/beach_red.jfif') }}" alt="‘Red Flag’ Beaches" class="d-block w-100"/>
                 <div class="carousel-caption">
                   <h5><a href="https://www.thesouthafrican.com/news/these-popular-cape-town-beaches-have-chronic-water-quality-problems-breaking-12-december-2023/" target="_blank">‘Red Flag’ Beaches</a></h5>
                   <p>Discover which Cape Town beaches have chronic water quality problems.</p>
